Drawing grid should be centered
This is consistent with pgf, and is more visually attractive
when the grid is not an integer step size.

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -763,31 +763,77 @@
 % \subsection{Grids}
 %
 % \begin{macro}{\draw_path_grid:nnnn}
-% \begin{macro}{\@@_path_grid:nnnnnn}
-%   A simple set of loops.
+% \begin{macro}
+%   {
+%     \@@_path_grid_auxi:nnnnnn, \@@_path_grid_auxi:ffnnnn,
+%     \@@_path_grid_auxii:nnnnnn,
+%     \@@_path_grid_auxiii:nnnnnn, \@@_path_grid_auxiiii:ffnnnn
+%   }
+% \begin{macro}
+%   {\@@_path_grid_auxiv:nnnnnnnn, \@@_path_grid_auxiv:ffnnnnnn}
+%   The main complexity here is lining up the grid in the middle
+%   of the requested range. To keep it simple, we tidy up the argument
+%   ordering first.
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_path_grid:nnnn #1#2#3#4
   {
     \@@_point_process:nnn
-      { \@@_path_grid:nnnnnn {#1} {#2} }
+      {
+        \@@_path_grid_auxi:ffnnnn
+          { \dim_eval:n { \dim_abs:n {#1} } }
+          { \dim_eval:n { \dim_abs:n {#2} } }
+      }
       {#3} {#4}
   }
-\cs_new_protected:Npn \@@_path_grid:nnnnnn #1#2#3#4#5#6
+\cs_new_protected:Npn \@@_path_grid_auxi:nnnnnn #1#2#3#4#5#6
+  {
+    \dim_compare:nNnTF {#3} > {#5}
+      { \@@_path_grid_auxii:nnnnnn {#1} {#2} {#5} {#4} {#3} {#6} }
+      { \@@_path_grid_auxii:nnnnnn {#1} {#2} {#3} {#4} {#5} {#6} }
+  }
+\cs_generate_variant:Nn \@@_path_grid_auxi:nnnnnn { ff }
+\cs_new_protected:Npn \@@_path_grid_auxii:nnnnnn #1#2#3#4#5#6
+  {
+    \dim_compare:nNnTF {#4} > {#6}
+      { \@@_path_grid_auxiii:nnnnnn {#1} {#2} {#3} {#6} {#5} {#4} }
+      { \@@_path_grid_auxiii:nnnnnn {#1} {#2} {#3} {#4} {#5} {#6} }
+  }
+\cs_new_protected:Npn \@@_path_grid_auxiii:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_path_grid_auxiv:ffnnnnnn
+      {
+        \fp_to_dim:n
+          { #3 + ((#5 - #3) - #1 * trunc((#5 - #3) / (#1))) / 2 }
+      }
+      {
+        \fp_to_dim:n
+          { #4 + ((#6 - #4) - #2 * trunc((#6 - #4) / (#2))) / 2 }
+      }
+      {#1} {#2} {#3} {#4} {#5} {#6}
+  }
+\cs_new_protected:Npn \@@_path_grid_auxiv:nnnnnnnn #1#2#3#4#5#6#7#8
   {
     \dim_step_inline:nnnn
-      {#3} { \dim_compare:nNnF {#3} < {#5} { - } \dim_abs:n {#1} } {#5}
+      {#1}
+      {#3}
+      {#7}
       {
-        \draw_path_moveto:n { ##1 , #4 }
-        \draw_path_lineto:n { ##1 , #6 }
+        \draw_path_moveto:n { ##1 , #6 }
+        \draw_path_lineto:n { ##1 , #8 }
       }
     \dim_step_inline:nnnn
-      {#4} { \dim_compare:nNnF {#4} < {#6} { - } \dim_abs:n {#2} } {#6}
+      {#2}
+      {#4}
+      {#8}
       {
-        \draw_path_moveto:n { #3 , ##1 }
-        \draw_path_lineto:n { #5 , ##1 }
+        \draw_path_moveto:n { #5 , ##1 }
+        \draw_path_lineto:n { #7 , ##1 }
       }
   }
+\cs_generate_variant:Nn \@@_path_grid_auxiv:nnnnnnnn { ff }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
