--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -715,11 +715,13 @@
 %
 % \begin{function}{\draw_path_grid:nnnn}
 %   \begin{syntax}
-%     \cs{draw_path_grid:nnnn} \Arg{xspace} \Arg{yspace} \Arg{lower-left} \Arg{upper-right}
+%     \cs{draw_path_grid:nnnn} \Arg{xstep} \Arg{ystep} \Arg{lower-left} \Arg{upper-right}
 %   \end{syntax}
-%   Constructs a grid of \meta{xspace} and \meta{yspace} from the
-%   \meta{lower-left} to the \meta{upper-right}, and appends this to the
-%   current path.
+%   Constructs a grid of \meta{xstep} and \meta{ystep} inside the rectangle
+%   defined by the \meta{lower-left} and the \meta{upper-right}, and appends
+%   this to the current path. The grid will be centered inside the rectangle,
+%   so grid lines will only coincidence with the start/end positions when the
+%   requested width/height is an integer multiple of the step size.
 %   \begin{demo}
 %     \draw_begin:
 %       \draw_linewidth:n { 0.8pt }
