--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -25,6 +25,7 @@
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
+\usepackage[utf8]{inputenc}
 \usepackage{l3draw}
 % For creating code demonstrations
 % This needs access to some code-level interfaces in listings
