Catch error case of giving tuple to \fp_step_function:nnnN (see #438)

--- a/l3kernel/l3fp-traps.dtx
+++ b/l3kernel/l3fp-traps.dtx
@@ -333,11 +333,11 @@
 %
 % \subsection{Errors}
 %
-% \begin{macro}[EXP]{\@@_error:nnnn, \@@_error:nnfn, \@@_error:nffn}
+% \begin{macro}[EXP]{\@@_error:nnnn, \@@_error:nnfn, \@@_error:nffn, \@@_error:nfff}
 %    \begin{macrocode}
 \cs_new:Npn \@@_error:nnnn
   { \__kernel_msg_expandable_error:nnnnn { kernel } }
-\cs_generate_variant:Nn \@@_error:nnnn { nnf, nff }
+\cs_generate_variant:Nn \@@_error:nnnn { nnf, nff , nfff }
 %    \end{macrocode}
 % \end{macro}
 %
