Make \fp_compare:nTF robust against tuples (fixes #438); add tests
This remaining problem only showed up if the argument of \fp_compare:nTF
evaluates to a tuple, which does not happen for the supported syntax
operand_1 relation_1 operand_2 etc.

--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -96,16 +96,20 @@
 % \begin{macro}[pTF, EXP]{\fp_compare:n}
 % \begin{macro}[EXP]{\@@_compare_return:w}
 %   Within floating point expressions, comparison operators are treated
-%   as operations, so we evaluate |#1|, then compare with $0$.
+%   as operations, so we evaluate |#1|, then compare with $\pm 0$.
+%   Tuples are \texttt{true}.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \fp_compare:n #1 { p , T , F , TF }
   {
     \exp_after:wN \@@_compare_return:w
     \exp:w \exp_end_continue_f:w \@@_parse:n {#1}
   }
-\cs_new:Npn \@@_compare_return:w \s_@@ \@@_chk:w #1#2;
+\cs_new:Npn \@@_compare_return:w #1#2#3;
   {
-    \if_meaning:w 0 #1
+    \if_charcode:w 0
+          \@@_if_type_fp:NTwFw
+            #1 { \use_i_delimit_by_q_stop:nw #3 \q_stop }
+            \s_@@ 1 \q_stop
       \prg_return_false:
     \else:
       \prg_return_true:
