--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -73,8 +73,8 @@
 % integer expression interface for convenience.
 % 
 % \begin{function}[EXP]{\fpeval}
-%   The expandable command \cs{fpeval} takes as it's argument a floating
-%   point expression and will produce a result using the normal rules of
+%   The expandable command \cs{fpeval} takes as its argument a floating
+%   point expression and produces a result using the normal rules of
 %   mathematics. As this command is expandable it can be used where \TeX{}
 %   requires a number and for example within a low-level \cs{edef} operation
 %   to give a purely numerical result.
@@ -122,9 +122,11 @@
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
 %   \item Automatic conversion (no need for \cs{number}) of
-%     integer, dimension, and skip variables to floating points,
+%     integer, dimension, and skip variables to floating points numbers,
 %     expressing dimensions in points and ignoring the stretch and
 %     shrink components of skips.
+%   \item Tuples: $(x_1,\ldots{},x_n)$ that can be added together,
+%     multiplied or divided by a floating point number, and nested.
 % \end{itemize}
 %
 % An example of use could be the following.
