Round corners in drawing paths
The same ideas as in pgf, so the same limitation
if the path is short ...

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -892,6 +892,7 @@
               { \ERROR }
           }
       }
+    \@@_softpath_round_corners:
     \bool_lazy_and:nnT
       { \l_@@_update_bb_bool }
       { \l_@@_path_use_stroke_bool }
