Simply corner rounding
Probably for the type of path where this applies,
l3tl-build is overkill.

--- a/l3experimental/l3draw/l3draw-softpath.dtx
+++ b/l3experimental/l3draw/l3draw-softpath.dtx
@@ -320,8 +320,7 @@
 % step through, find the corners, find the supporting data, do the rounding.
 %
 % \begin{variable}{\l_@@_softpath_main_tl}
-%   For constructing the updated path: notice that we use \pkg{l3tl-build}
-%   here as grouping can be controlled.
+%   For constructing the updated path.
 %    \begin{macrocode}
 \tl_new:N \l_@@_softpath_main_tl
 %    \end{macrocode}
@@ -379,24 +378,25 @@
 %   Rounding corners on a path means going through the entire path and
 %   adjusting it. As such, we avoid this entirely if we know there are no
 %   corners to deal with. Assuming there is work to do, we recover the existing
-%   path and start a loop, using \pkg{l3tl-build} for the main data storage
-%   (everything here can be in a group).
+%   path and start a loop.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_softpath_round_corners:
   {
     \bool_if:NT \g_@@_softpath_corners_bool
       {
-        \__tl_build:Nw \l_@@_softpath_main_tl
-        \tl_clear:N \l_@@_softpath_part_tl
-        \fp_zero:N \l_@@_softpath_lastx_fp
-        \fp_zero:N \l_@@_softpath_lasty_fp
-        \tl_clear:N \l_@@_softpath_first_tl
-        \tl_clear:N \l_@@_softpath_move_tl
-        \@@_softpath_concat:n { }
-        \exp_after:wN \@@_softpath_round_loop:Nnn
-          \g_@@_softpath_main_tl
-          \q_recursion_tail ? ?
-          \q_recursion_stop
+        \group_begin:
+          \tl_clear:N \l_@@_softpath_main_tl
+          \tl_clear:N \l_@@_softpath_part_tl
+          \fp_zero:N \l_@@_softpath_lastx_fp
+          \fp_zero:N \l_@@_softpath_lasty_fp
+          \tl_clear:N \l_@@_softpath_first_tl
+          \tl_clear:N \l_@@_softpath_move_tl
+          \@@_softpath_concat:n { }
+          \exp_after:wN \@@_softpath_round_loop:Nnn
+            \g_@@_softpath_main_tl
+            \q_recursion_tail ? ?
+            \q_recursion_stop
+        \group_end:
       }
     \bool_gset_false:N \g_@@_softpath_corners_bool
   }
@@ -420,8 +420,10 @@
         \fp_set:Nn \l_@@_softpath_lasty_fp {#3}
         \token_if_eq_meaning:NNTF #1 \@@_softpath_moveto_op:nn
           {
-            \__tl_build_one:o \l_@@_softpath_move_tl
-            \__tl_build_one:o \l_@@_softpath_part_tl
+            \tl_put_right:No \l_@@_softpath_main_tl
+              \l_@@_softpath_move_tl
+            \tl_put_right:No \l_@@_softpath_main_tl
+              \l_@@_softpath_part_tl
             \tl_set:Nn \l_@@_softpath_move_tl { #1 {#2} {#3} }
             \tl_clear:N \l_@@_softpath_first_tl
             \tl_clear:N \l_@@_softpath_part_tl
@@ -647,9 +649,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_softpath_round_end:
   {
-    \__tl_build_one:o \l_@@_softpath_move_tl
-    \__tl_build_one:o \l_@@_softpath_part_tl
-    \__tl_build_end:
+    \tl_put_right:No \l_@@_softpath_main_tl
+      \l_@@_softpath_move_tl
+    \tl_put_right:No \l_@@_softpath_main_tl
+      \l_@@_softpath_part_tl
     \tl_gset_eq:NN \g_@@_softpath_main_tl \l_@@_softpath_main_tl
   }
 %    \end{macrocode}
