Scope docs [ci skip]
Some of this might not quite be true just yet!

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -207,6 +207,15 @@
 %       \draw_path_use_clear:n  { stroke }
 %     \draw_end:
 %   \end{demo}
+%   Global graphical concepts restricted by scope are
+%   \begin{itemize}
+%     \item Line width
+%     \item Stroke and fill color
+%     \item Dash pattern
+%     \item Line joining and capping, including the miter limit
+%     \item Clipping paths
+%     \item Canvas (driver) transformations
+%   \end{itemize}
 % \end{function}
 %
 % \begin{function}{\g_draw_linewidth_default_dim}
