s/macro/variable/ [ci skip]

--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -153,12 +153,12 @@
 %
 % \subsection{Scopes}
 %
-% \begin{macro}{\l_@@_linewidth_dim}
+% \begin{variable}{\l_@@_linewidth_dim}
 %   Storage for local variables.
 %    \begin{macrocode}
 \dim_new:N \l_@@_linewidth_dim
 %    \end{macrocode}
-% \end{macro}
+% \end{variable}
 %
 % \begin{macro}{\draw_scope_begin:, \draw_scope_begin:}
 %   As well as the graphics (and \TeX{}) scope, also deal with global
