Allow for nesting bb data

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -966,6 +966,23 @@
 %   This assignment is local.
 % \end{function}
 %
+% \subsection{Suspending drawing elements}
+%
+% Suspending drawing elements is necessary to allowing nesting of subparts.
+% These features have specific use requirements: the preconditions must be
+% met.
+%
+% \begin{function}{\draw_suspend_bb_begin:, \draw_suspend_bb_end:}
+%   \begin{syntax}
+%     \cs{draw_suspend_bb_begin:}
+%     ...
+%     \cs{draw_suspend_bb_begin:}
+%   \end{syntax}
+%   Suspends (and saves) calculation of the bounding box of a drawing,
+%   resetting the tracking data and allowing the bounding box of the
+%   nested content to be tracked.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
