--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -541,7 +541,7 @@
 %   \end{syntax}
 %   Closes the current part of the path by appending a straight line from
 %   the current point to the starting point of the path. In general, any
-%   path to be _filled_ should include a close instructions.
+%   path to be \emph{filled} should include a close instructions.
 % \end{function}
 %
 % \begin{function}{\draw_path_use:n, \draw_path_use_clear:n}
