--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -177,11 +177,11 @@
 % \end{variable}
 % \end{variable}
 %
-% \begin{macro}{\draw_scope_begin:, \draw_scope_begin:}
+% \begin{macro}{\draw_scope_state_begin:, \draw_scope_state_begin:}
 %   As well as the graphics (and \TeX{}) scope, also deal with global
 %   data structures.
 %    \begin{macrocode}
-\cs_new_protected:Npn \draw_scope_begin:
+\cs_new_protected:Npn \draw_scope_state_begin:
   {
     \driver_draw_scope_begin:
     \group_begin:
@@ -190,7 +190,7 @@
       \tl_set_eq:NN \l_@@_stroke_color_tl \g_@@_stroke_color_tl
       \@@_path_reset_limits:
   }
-\cs_new_protected:Npn \draw_scope_end:
+\cs_new_protected:Npn \draw_scope_state_end:
   {
       \dim_gset_eq:NN \g_@@_linewidth_dim \l_@@_linewidth_dim
       \tl_gset_eq:NN \g_@@_fill_color_tl \l_@@_fill_color_tl
@@ -200,12 +200,6 @@
   }
 %    \end{macrocode}
 % \end{macro}
-%
-% \subsection{Suspending features}
-%
-% This section covers cases where some elements need to be inserted without
-% disturbing the rest of a drawing. This needs a little work due to the global
-% nature of various elements.
 %
 % \begin{variable}
 %   {\l_@@_xmax_dim, \l_@@_xmin_dim, \l_@@_ymax_dim, \l_@@_ymin_dim}
